# backend/docs/swagger.yaml
@@ -536,6 +536,17 @@ definitions:
       message:
         type: string
     type: object
+  ApiResponse-array_ProductOption:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/ProductOption'
+        type: array
+      message:
+        type: string
+    type: object
   ApiResponse-array_TelemetryPoint:
     properties:
       code:
@@ -1410,6 +1421,17 @@ definitions:
         type: array
       total:
         type: integer
+    type: object
+  ProductOption:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      nodeType:
+        type: string
+      productKey:
+        type: string
     type: object
   ProductSuccessResponse:
     properties:
@@ -3435,6 +3457,21 @@ paths:
       security:
       - Bearer: []
       summary: Execute product message parser
+      tags:
+      - Products
+  /products/options:
+    get:
+      description: Lists active products as options for select components.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response
+          schema:
+            $ref: '#/definitions/ApiResponse-array_ProductOption'
+      security:
+      - Bearer: []
+      summary: List product options
       tags:
       - Products
   /register:
